# py-bin-helloworld

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: linux.yml  mac.yml
